Changed team row to flex-wrap to avoid crowded cards.

--- a/Develop/style/style.css
+++ b/Develop/style/style.css
@@ -1,3 +1,3 @@
 .employee-card {
-    margin: 0px 5px; 
+    margin: 5px 5px; 
 }
